<resources>
    <string name="app_name">MobilePDAM</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">FAQ</string>
    <string name="title_notifications">Berita</string>
    <string name="title_akun">Akun</string>
    <string name="content_tagihan">Tagihan</string>
    <string name="content_infopakai">Info Pemakaian</string>
    <string name="content_lapormeteran">Lapor Meteran</string>
    <string name="content_pengaduan">Pengaduan</string>
    <string name="content_pasangbaru">Pasang Baru</string>
    <string name="content_pembayaran">Pembayaran</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>