<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/bgapp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_artikel"
            android:layout_width="345dp"
            android:layout_height="145dp"
            android:layout_marginVertical="35dp"
            android:layout_gravity="center"/>

        <!--        <LinearLayout-->
        <!--            android:id="@+id/ll_slider_dots"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center_horizontal"-->
        <!--            android:layout_marginBottom="16dp"-->
        <!--            android:orientation="horizontal"/>-->

        <LinearLayout
            android:id="@+id/row_item"
            android:layout_width="match_parent"
            android:layout_height="445dp"
            android:layout_marginTop="10dp"
            android:background="@color/bgapp"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--            Tagihan-->
                <LinearLayout
                    android:id="@+id/ll_tagihan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp">

                    <!--                ll buat naroh gambar-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@drawable/rounded_shape"
                        android:elevation="2dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="-1dp"
                            android:layout_marginBottom="10dp"
                            android:contentDescription="@string/content_tagihan"
                            android:src="@drawable/placeholder" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="9dp"
                        android:text="@string/content_tagihan"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>

                <!--            info pemakaian-->
                <LinearLayout
                    android:id="@+id/ll_infopakai"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp">

                    <!--                ll buat naroh gambar-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@drawable/rounded_shape"
                        android:elevation="2dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="-1dp"
                            android:layout_marginBottom="10dp"
                            android:contentDescription="@string/content_tagihan"
                            android:src="@drawable/placeholder" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="9dp"
                        android:text="@string/content_infopakai"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>

                <!--            lapor meteran-->
                <LinearLayout
                    android:id="@+id/ll_lapormeteran"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp">

                    <!--                ll buat naroh gambar-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@drawable/rounded_shape"
                        android:elevation="2dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="-1dp"
                            android:layout_marginBottom="10dp"
                            android:contentDescription="@string/content_tagihan"
                            android:src="@drawable/placeholder" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="9dp"
                        android:text="@string/content_lapormeteran"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

            <!--            row 2 (pengaduan, pasangbaru, pembayaran)-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--            pengaduan-->
                <LinearLayout
                    android:id="@+id/ll_pengaduan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp">

                    <!--                ll buat naroh gambar-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@drawable/rounded_shape"
                        android:elevation="2dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="-1dp"
                            android:layout_marginBottom="10dp"
                            android:contentDescription="@string/content_pengaduan"
                            android:src="@drawable/placeholder" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="9dp"
                        android:text="@string/content_pengaduan"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>

                <!--            pasangbaru-->
                <LinearLayout
                    android:id="@+id/ll_pasangbaru"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp">

                    <!--                ll buat naroh gambar-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@drawable/rounded_shape"
                        android:elevation="2dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="-1dp"
                            android:layout_marginBottom="10dp"
                            android:contentDescription="@string/content_pasangbaru"
                            android:src="@drawable/placeholder" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="9dp"
                        android:text="@string/content_pasangbaru"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>

                <!--            pembayaran-->
                <LinearLayout
                    android:id="@+id/ll_pembayaran"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp">

                    <!--                ll buat naroh gambar-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@drawable/rounded_shape"
                        android:elevation="2dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="-1dp"
                            android:layout_marginBottom="10dp"
                            android:contentDescription="@string/content_pembayaran"
                            android:src="@drawable/placeholder" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="9dp"
                        android:text="@string/content_pembayaran"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>