<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgapp">

<!--    &lt;!&ndash; AppBar &ndash;&gt;-->
<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:id="@+id/app_bar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/light_blue"-->
<!--        android:elevation="0dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        &lt;!&ndash; Constraint Layout to hold both text and icon &ndash;&gt;-->
<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="15dp">-->

<!--            &lt;!&ndash; LinearLayout containing the TextViews &ndash;&gt;-->
<!--            <LinearLayout-->
<!--                android:id="@+id/linear_layout"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginEnd="8dp"-->
<!--                android:orientation="vertical"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent">-->

<!--                &lt;!&ndash; TextView for Name &ndash;&gt;-->
<!--                <TextView-->
<!--                    android:id="@+id/tv_name"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="John Doe"-->
<!--                    android:textColor="#FFFFFF"-->
<!--                    android:textSize="15sp"-->
<!--                    android:textStyle="bold" />-->

<!--                &lt;!&ndash; TextView for Customer Number &ndash;&gt;-->
<!--                <TextView-->
<!--                    android:id="@+id/tv_customer_number"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="5dp"-->
<!--                    android:fontFamily="sans-serif-light"-->
<!--                    android:text="No Pelanggan"-->
<!--                    android:textColor="#FFFFFF"-->
<!--                    android:textSize="16sp" />-->
<!--            </LinearLayout>-->

<!--            &lt;!&ndash; Icon (Notification) &ndash;&gt;-->
<!--            <ImageView-->
<!--                android:id="@+id/notification_icon"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="30dp"-->
<!--                android:contentDescription="Notification Icon"-->
<!--                android:src="@drawable/notifications_24px"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.993"-->
<!--                app:layout_constraintStart_toEndOf="@+id/linear_layout"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintVertical_bias="0.47"-->
<!--                app:tint="@android:color/white" />-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--    </com.google.android.material.appbar.AppBarLayout>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_artikel"
            android:layout_width="345dp"
            android:layout_height="145dp"
            android:layout_margin="20dp"
            android:layout_marginTop="36dp"
            android:layout_gravity="center"/>

        <!--        <LinearLayout-->
        <!--            android:id="@+id/ll_slider_dots"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center_horizontal"-->
        <!--            android:layout_marginBottom="16dp"-->
        <!--            android:orientation="horizontal"/>-->

        <LinearLayout
            android:id="@+id/row_item"
            android:layout_width="match_parent"
            android:layout_height="488dp"
            android:background="@color/bgapp"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--            Tagihan-->
                <LinearLayout
                    android:id="@+id/ll_tagihan"
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp">

                    <!--                ll buat naroh gambar-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:background="@drawable/rounded_shape"
                        android:elevation="2dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:layout_marginTop="-1dp"
                            android:layout_marginBottom="10dp"
                            android:contentDescription="@string/content_tagihan"
                            android:src="@drawable/placeholder" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="9dp"
                        android:text="@string/content_tagihan"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--            info pemakaian-->
                <LinearLayout
                    android:id="@+id/ll_infopakai"
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp">

                    <!--                ll buat naroh gambar-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:background="@drawable/rounded_shape"
                        android:elevation="2dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:layout_marginTop="-1dp"
                            android:layout_marginBottom="10dp"
                            android:contentDescription="@string/content_tagihan"
                            android:src="@drawable/placeholder" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="9dp"
                        android:text="@string/content_infopakai"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--            lapor meteran-->
                <LinearLayout
                    android:id="@+id/ll_lapormeteran"
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp">

                    <!--                ll buat naroh gambar-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:background="@drawable/rounded_shape"
                        android:elevation="2dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:layout_marginTop="-1dp"
                            android:layout_marginBottom="10dp"
                            android:contentDescription="@string/content_tagihan"
                            android:src="@drawable/placeholder" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="9dp"
                        android:text="@string/content_lapormeteran"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <!--            row 2 (pengaduan, pasangbaru, pembayaran)-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--            pengaduan-->
                <LinearLayout
                    android:id="@+id/ll_pengaduan"
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp">

                    <!--                ll buat naroh gambar-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:background="@drawable/rounded_shape"
                        android:elevation="2dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:layout_marginTop="-1dp"
                            android:layout_marginBottom="10dp"
                            android:contentDescription="@string/content_pengaduan"
                            android:src="@drawable/placeholder" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="9dp"
                        android:text="@string/content_pengaduan"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--            pasangbaru-->
                <LinearLayout
                    android:id="@+id/ll_pasangbaru"
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp">

                    <!--                ll buat naroh gambar-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:background="@drawable/rounded_shape"
                        android:elevation="2dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:layout_marginTop="-1dp"
                            android:layout_marginBottom="10dp"
                            android:contentDescription="@string/content_pasangbaru"
                            android:src="@drawable/placeholder" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="9dp"
                        android:text="@string/content_pasangbaru"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--            pembayaran-->
                <LinearLayout
                    android:id="@+id/ll_pembayaran"
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp">

                    <!--                ll buat naroh gambar-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:background="@drawable/rounded_shape"
                        android:elevation="2dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:layout_marginTop="-1dp"
                            android:layout_marginBottom="10dp"
                            android:contentDescription="@string/content_pembayaran"
                            android:src="@drawable/placeholder" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="9dp"
                        android:text="@string/content_pembayaran"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@color/light_blue"
        app:itemTextColor="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <fragment
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>